@@ -2,7 +2,7 @@ name = IPC-SRLock
 
 [Prereqs]
 perl              = 5.010001
-namespace::sweep  = 0.006
+namespace::autoclean = 0.19
 Class::Null       = 1.09
 Date::Format      = 2.24
 File::DataClass   = v0.35.0
