@@ -1,7 +1,7 @@
 package IPC::SRLock;
 
 use 5.010001;
-use namespace::sweep;
+use namespace::autoclean;
 use version; our $VERSION = qv( sprintf '0.22.%d', q$Rev: 1 $ =~ /\d+/gmx );
 
 use Moo;
